// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaBlock #isActive 1`] = `
<div
  className="RichEditor-media RichEditor-media--open"
>
  <NullBlock
    entity={
      Object {
        "getType": [Function],
        "type": "TEST",
      }
    }
    entityConfig={Object {}}
    isActive={true}
    onCancel={[Function]}
    onClick={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`MediaBlock basic 1`] = `
<div
  className="RichEditor-media"
>
  <NullBlock
    entity={
      Object {
        "getType": [Function],
        "type": "TEST",
      }
    }
    entityConfig={Object {}}
    isActive={false}
    onCancel={[Function]}
    onClick={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`MediaBlock embed 1`] = `
<div
  className="RichEditor-media"
>
  <NullBlock
    entity={
      Object {
        "getType": [Function],
        "type": "EMBED",
      }
    }
    entityConfig={Object {}}
    isActive={false}
    onCancel={[Function]}
    onClick={[Function]}
    onSave={[Function]}
  />
</div>
`;

exports[`MediaBlock image 1`] = `
<div
  className="RichEditor-media"
>
  <NullBlock
    entity={
      Object {
        "getType": [Function],
        "type": "IMAGE",
      }
    }
    entityConfig={Object {}}
    isActive={false}
    onCancel={[Function]}
    onClick={[Function]}
    onSave={[Function]}
  />
</div>
`;
